applied min-width to each service and made a media query to tackle spacing issue at width of 489px

--- a/Resources/main.css
+++ b/Resources/main.css
@@ -158,7 +158,7 @@ header {
     #logo {
         /* text-align: center; */
         /* font-size: 2.6rem; */
-        font-size: min(0.5rem);  /*Come back to this*/
+        font-size: min(0.5rem);
         font-size: max(2.6rem);  /*Come back to this*/
         /* font-size: calc(7px + .5vw); */
         margin: 0px;
@@ -175,18 +175,6 @@ header {
         margin-right: 0;
         transition: 0.3s;
     }
-
-    /* ul#prime-nav {
-        padding: 0;
-        margin: 0;
-        text-align: center;
-        
-    }
-    
-    ul#prime-nav li{
-        margin: auto 30px;
-    } */
-
 }
 
 
@@ -443,7 +431,7 @@ article {
 .service{
     /* position: relative; */
     height: 70%;
-    width: 17%; /*this breaks at a width of 710 fix it*/
+    width: 17%; 
     border-radius: 15px;
     box-shadow: 0px 4px 10px 2px #04040e;
     /* box-shadow: X-offset Y-offset Blur Spread; */
@@ -461,16 +449,19 @@ article {
 .service.alignment{
     background-image: url("https://t4.ftcdn.net/jpg/01/29/75/91/240_F_129759159_ziC7X6c2xPYohha3XHhtjDgAQfbmeGxU.jpg");
     background-size: cover;
+    min-width: 150px;
 }
 
 .service.brakes{
     background-image: url("https://images.pexels.com/photos/6870323/pexels-photo-6870323.jpeg?auto=compress&cs=tinysrgb&w=600");
     background-size: cover;
+    min-width: 150px;
 }
 
 .service.batteries{
     background-image: url("https://images.pexels.com/photos/4517073/pexels-photo-4517073.jpeg?auto=compress&cs=tinysrgb&w=600");
     background-size: cover;
+    min-width: 150px;
 }
 
 
@@ -483,6 +474,37 @@ article {
     border-radius: 15px;
     transition: all ease-in-out 1000ms;
 }
+
+
+@media only screen and (max-width: 489px){  /* Fix the Flex box container either add overflow property or ...*/
+    
+    #services-container {
+        height: 26rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        align-content: space-between;
+        text-align: center;
+        border: solid 3px rgb(240, 12, 9);
+    } 
+
+    .service a{
+        font-size: 2.4rem;
+        text-decoration: none;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        border-radius: 15px;
+        transition: all ease-in-out 1000ms;
+    }
+    
+}
+
+
+
+
 
 /*Service Link States*/
 
